--- a/Mini-Project/css/index.css
+++ b/Mini-Project/css/index.css
@@ -4,7 +4,7 @@ body{
     background-repeat: no-repeat;
     font-family: "Montserrat",sans-serif;
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 .nav{
     width: 100%;
